// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example.js 1`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>

=====================================output=====================================
function f() {<CR>
  console.log("testing line endings");<CR>
}<CR>

================================================================================
`;

exports[`example.js 2`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>

=====================================output=====================================
function f() {<CRLF>
  console.log("testing line endings");<CRLF>
}<CRLF>

================================================================================
`;

exports[`example.js 3`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>

=====================================output=====================================
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>

================================================================================
`;
